# real_estate_marketplace

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  backend.http  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260326_0001_initial_marketplace_schema.py  20260326_0002_add_listing_media_public_id.py  20260327_0003_add_discovery_indexes.py  20260327_0004_add_messaging_indexes_and_attachment_public_id.py  20260327_0005_add_reporting_and_commerce_fields.py  20260327_0006_align_listings_to_real_estate.py  20260327_0007_normalize_real_estate_enum_values.py  20260329_0008_add_listing_view_count.py  20260329_0009_add_listing_views_tracking.py  20260329_0010_add_normalized_listing_price_kgs.py
backend/app/: main.py
backend/app/api/: deps.py  router.py
backend/app/api/routes/: auth.py  categories.py  conversations.py  favorites.py  health.py  listings.py  media.py  notifications.py  payments.py  profile.py  promotion_packages.py  promotions.py  public_users.py  reports.py  users.py
backend/app/core/: auth.py  config.py  exceptions.py  logging.py  security.py
backend/app/db/: base.py  enums.py  mixins.py  seed.py  session.py
backend/app/db/models/: __init__.py  access.py  admin.py  catalog.py  commerce.py  engagement.py  listing.py  messaging.py
backend/app/shared/: __init__.py  audit.py  schemas.py  storage.py
backend/scripts/: README.md
backend/tests/: conftest.py
backend/tests/integration/: test_auth_flows.py  test_marketplace_flows.py
(+186 files in other folders)
